--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,11 @@ on:
       - 'v*.*.*'
       - 'v*.*.*.*'
 
+permissions:
+  pull-requests: write
+  contents: write
+  packages: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
